# UR5_4DoF_custom_robotic_arm

./: .gitignore  README.md
src/robotiq_hande_description/: CHANGELOG.md  CMakeLists.txt  README.md
src/robotiq_hande_description/urdf/: robotiq_hande_gripper.urdf.xacro  robotiq_hande_gripper.xacro
src/ur5_4dof/: CMakeLists.txt  package.xml
src/ur5_4dof/launch/: display_4dof_with_gripper.launch.py  ignition_spawn.launch.py  spawn_arm.launch.py  spawn_with_camera.launch.py  view_urdf.launch.py
src/ur5_4dof/meshes/: camera.dae  camera.stl
src/ur5_4dof/urdf/: ur5_4dof.sdf  ur5_4dof.urdf  ur5_4dof.urdf.xacro
src/ur5_4dof/worlds/: empty.world  ur5_4dof.world
